--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,6 +46,8 @@ jobs:
 
       - name: Clone private repo
         run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
           git clone git@github.com:${{ env.PRIVATE_REPO }}.git source
           cd source
           git checkout ${{ github.event.inputs.tag }} || git checkout main
