--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,8 +61,8 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.27.x"
-          channel: "stable"
+          flutter-version: "3.32.x"
+          channel: "beta"
           cache: true
 
       - name: Setup
