fix: 安装 Inno Setup 用于创建 Windows exe 安装包

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -73,6 +73,12 @@ jobs:
           Add-Content $env:GITHUB_PATH "C:\flutter\\bin"
           C:\flutter\bin\flutter --version
 
+      - name: Install Inno Setup
+        shell: pwsh
+        run: |
+          choco install innosetup -y
+          Add-Content $env:GITHUB_PATH "C:\Program Files (x86)\Inno Setup 6"
+
       - name: Setup
         shell: pwsh
         run: |
