debug: 添加详细的构建日志，检查工具版本和输出

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -152,21 +152,45 @@ jobs:
           echo "Platform: ${{ matrix.platform }}"
           echo "Arch: ${{ matrix.arch }}"
           echo "IS_STABLE: ${{ env.IS_STABLE }}"
-          which flutter || echo "flutter not in PATH"
-          flutter --version || echo "flutter version failed"
-          which dart || echo "dart not in PATH"
-          which cargo || echo "cargo not in PATH"
-          echo "=== Starting Build ==="
-          dart setup.dart ${{ matrix.platform }} ${{ matrix.arch && format('--arch {0}', matrix.arch) }} ${{ env.IS_STABLE == 'true' && '--env stable' || '' }}
+          echo "Current directory: $(pwd)"
+          echo ""
+          echo "=== Tool Versions ==="
+          which flutter && flutter --version || echo "flutter not found"
+          which dart && dart --version || echo "dart not found"
+          which cargo && cargo --version || echo "cargo not found"
+          which go && go version || echo "go not found"
+          echo ""
+          echo "=== Checking flutter_distributor ==="
+          which flutter_distributor || echo "flutter_distributor not in PATH"
+          flutter_distributor --version || echo "flutter_distributor version failed"
+          echo ""
+          echo "=== Checking ISCC (Inno Setup) ==="
+          which ISCC || echo "ISCC not in PATH"
+          ls -la "/c/Program Files (x86)/Inno Setup 6/" 2>/dev/null || echo "Inno Setup dir not found"
+          echo ""
+          echo "=== Build Command ==="
+          echo "Running: dart setup.dart ${{ matrix.platform }} ${{ matrix.arch && format('--arch {0}', matrix.arch) }} ${{ env.IS_STABLE == 'true' && '--env stable' || '' }}"
+          echo ""
+          echo "=== Build Output ==="
+          dart setup.dart ${{ matrix.platform }} ${{ matrix.arch && format('--arch {0}', matrix.arch) }} ${{ env.IS_STABLE == 'true' && '--env stable' || '' }} 2>&1 | tee build.log
+          echo ""
+          echo "=== Build Exit Code: $? ==="
 
       - name: List dist contents
         if: always()
         run: |
           echo "=== source/dist contents ==="
-          ls -la ./source/dist/ || echo "source/dist not found"
-          find ./source/dist -type f 2>/dev/null || echo "No files found"
-          echo "=== All exe files ==="
-          find ./source -name "*.exe" -type f 2>/dev/null | head -20 || echo "No exe files"
+          ls -la ./source/dist/ 2>/dev/null || echo "source/dist not found or empty"
+          find ./source/dist -type f 2>/dev/null || echo "No files in dist"
+          echo ""
+          echo "=== source/build/windows contents ==="
+          ls -la ./source/build/windows/ 2>/dev/null || echo "source/build/windows not found"
+          echo ""
+          echo "=== All exe files in source ==="
+          find ./source -name "*.exe" -type f 2>/dev/null | grep -v "build/windows/x64/CMakeFiles" | head -30 || echo "No exe files"
+          echo ""
+          echo "=== Build log tail ==="
+          tail -100 ./source/build.log 2>/dev/null || echo "No build log"
 
       - name: Upload
         uses: actions/upload-artifact@v4
