feat: 添加 macOS 平台构建支持，暂时禁用 Windows ARM64
- 添加 macOS ARM64 构建 (macos-latest)
- 添加 macOS Intel 构建 (macos-13)
- 添加 macOS Flutter 环境设置
- 暂时禁用 Windows ARM64 构建（CMake 安装步骤有问题）
- 参考 FlClash 的构建流程进行配置

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,12 +25,19 @@ jobs:
           - platform: windows
             os: windows-latest
             arch: amd64
-          - platform: windows
-            os: windows-11-arm
-            arch: arm64
+          # Windows ARM64 暂时禁用，因为 CMake 安装步骤有问题
+          # - platform: windows
+          #   os: windows-11-arm
+          #   arch: arm64
           - platform: android
             os: ubuntu-latest
             arch: arm64
+          - platform: macos
+            os: macos-latest
+            arch: arm64
+          - platform: macos
+            os: macos-13
+            arch: amd64
 
     steps:
       - name: Setup SSH
@@ -130,6 +137,14 @@ jobs:
 
       - name: Setup Flutter (Android)
         if: matrix.platform == 'android'
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+          flutter-version: "3.35.7"
+          cache: true
+
+      - name: Setup Flutter (macOS)
+        if: matrix.platform == 'macos'
         uses: subosito/flutter-action@v2
         with:
           channel: "stable"
