feat: 优化多平台构建配置
- 添加 macOS ARM64 和 Intel 平台支持
- 移除 Windows ARM64 构建（CMake 兼容性问题）
- 将 Windows runner 从 windows-latest 改为 Windows-2022（修复 CMake 安装失败）
- 添加 macOS Flutter 环境配置步骤

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         include:
           - platform: windows
-            os: windows-latest
+            os: Windows-2022
             arch: amd64
           - platform: android
             os: ubuntu-latest
