--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
             os: macos-latest
             arch: arm64
           - platform: macos
-            os: macos-13
+            os: macos-15-intel
             arch: amd64
 
     steps:
