feat: Android构建支持所有3个架构
移除Android平台的arch限制，使构建自动生成：
- armeabi-v7a (32位ARM)
- arm64-v8a (64位ARM)
- x86_64 (模拟器)

setup.dart在未指定arch时会自动构建所有架构

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
             arch: amd64
           - platform: android
             os: ubuntu-latest
-            arch: arm64
+            # 不指定arch，自动构建所有3个架构: armeabi-v7a, arm64-v8a, x86_64
           - platform: macos
             os: macos-latest
             arch: arm64
