--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,6 +50,36 @@ jobs:
           git checkout ${{ github.event.inputs.tag }} || git checkout main
           git submodule update --init --recursive
 
+      - name: Free Disk Space (Android)
+        if: matrix.platform == 'android'
+        run: |
+          echo "=== 清理磁盘空间 ==="
+          echo "清理前磁盘使用情况:"
+          df -h
+
+          # 删除不需要的预装软件
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android/sdk/ndk
+          sudo rm -rf /usr/local/lib/android/sdk/build-tools/30*
+          sudo rm -rf /usr/local/lib/android/sdk/build-tools/31*
+          sudo rm -rf /usr/local/lib/android/sdk/build-tools/32*
+          sudo rm -rf /usr/local/lib/android/sdk/platforms/android-3[0-2]
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf /usr/share/swift
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
+          # 清理Docker镜像
+          sudo docker image prune --all --force || true
+
+          # 清理apt缓存
+          sudo apt-get clean || true
+
+          echo ""
+          echo "清理后磁盘使用情况:"
+          df -h
+
       - name: Setup Android Signing
         if: matrix.platform == 'android'
         run: |
