--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,50 +38,28 @@ jobs:
     steps:
       - name: Free Disk Space (Android)
         if: matrix.platform == 'android'
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: false  # 保留Android SDK
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
+      - name: Additional Disk Cleanup (Android)
+        if: matrix.platform == 'android'
         run: |
-          echo "=== 清理磁盘空间 ==="
-          echo "清理前磁盘使用情况:"
+          echo "=== 额外清理磁盘空间 ==="
           df -h
 
-          # 删除大型预装软件包
-          sudo rm -rf /usr/share/dotnet              # ~2GB
-          sudo rm -rf /usr/share/swift               # ~1.5GB
-          sudo rm -rf /usr/local/share/boost         # ~1GB
-          sudo rm -rf /opt/ghc                       # ~5GB
-          sudo rm -rf /opt/hostedtoolcache/CodeQL    # ~5GB
-          sudo rm -rf /opt/hostedtoolcache/go        # ~1GB
-          sudo rm -rf /opt/hostedtoolcache/node      # ~1GB
-          sudo rm -rf /opt/hostedtoolcache/Python    # ~1GB
-          sudo rm -rf /opt/hostedtoolcache/Ruby      # ~500MB
-          sudo rm -rf /usr/local/lib/heroku          # ~500MB
-          sudo rm -rf /usr/local/share/chromium      # ~500MB
-          sudo rm -rf /usr/local/share/powershell    # ~500MB
-          sudo rm -rf /usr/share/miniconda           # ~500MB
-          sudo rm -rf /usr/share/az_*                # Azure CLI
-
           # 清理Android SDK不需要的部分
-          sudo rm -rf /usr/local/lib/android/sdk/ndk                    # ~8GB
-          sudo rm -rf /usr/local/lib/android/sdk/build-tools/2*
-          sudo rm -rf /usr/local/lib/android/sdk/build-tools/30*
-          sudo rm -rf /usr/local/lib/android/sdk/build-tools/31*
-          sudo rm -rf /usr/local/lib/android/sdk/build-tools/32*
-          sudo rm -rf /usr/local/lib/android/sdk/build-tools/33*
-          sudo rm -rf /usr/local/lib/android/sdk/platforms/android-2*
-          sudo rm -rf /usr/local/lib/android/sdk/platforms/android-30
-          sudo rm -rf /usr/local/lib/android/sdk/platforms/android-31
-          sudo rm -rf /usr/local/lib/android/sdk/platforms/android-32
-          sudo rm -rf /usr/local/lib/android/sdk/platforms/android-33
+          sudo rm -rf /usr/local/lib/android/sdk/ndk
+          sudo rm -rf /usr/local/lib/android/sdk/build-tools/3[0-3]*
+          sudo rm -rf /usr/local/lib/android/sdk/platforms/android-3[0-3]
           sudo rm -rf /usr/local/lib/android/sdk/system-images
-          sudo rm -rf /usr/local/lib/android/sdk/emulator              # ~1GB
-
-          # 清理Docker
-          sudo docker image prune --all --force || true
-          sudo docker system prune --all --force --volumes || true
-
-          # 清理apt和其他缓存
-          sudo apt-get clean || true
-          sudo rm -rf /var/lib/apt/lists/*
-          sudo rm -rf /tmp/*
+          sudo rm -rf /usr/local/lib/android/sdk/emulator
 
           echo ""
           echo "清理后磁盘使用情况:"
