--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,8 +54,7 @@ jobs:
           echo "=== 额外清理磁盘空间 ==="
           df -h
 
-          # 清理Android SDK不需要的部分
-          sudo rm -rf /usr/local/lib/android/sdk/ndk
+          # 清理Android SDK不需要的部分（保留NDK，构建需要）
           sudo rm -rf /usr/local/lib/android/sdk/build-tools/3[0-3]*
           sudo rm -rf /usr/local/lib/android/sdk/platforms/android-3[0-3]
           sudo rm -rf /usr/local/lib/android/sdk/system-images
